<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/Background"
    tools:context="com.example.jisupark.firebaseloginapp.MainActivity">

    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteY="82dp"
        tools:layout_editor_absoluteX="82dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:layout_above="@+id/newPassword"
        android:layout_toEndOf="@+id/progressBar"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true"/>  <!--10분 50초까지-->

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="211dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_above="@+id/remove"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"/>

    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button"
        android:id="@+id/change_password_button" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out"
        android:background="#FFE39F"/>

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#108F97"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="259dp"
        tools:layout_editor_absoluteX="199dp"
        android:layout_below="@+id/useremail"
        android:layout_alignStart="@+id/changePass"
        android:layout_marginTop="61dp" />

    <TextView
        android:hint="Email ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/useremail"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="624dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/car_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/parkinglot"
                android:text="1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="155dp" />

            <Button
                android:id="@+id/car_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@color/parkinglot"
                android:text="2"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="178dp" />

            <Button
                android:id="@+id/car_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/parkinglot"
                android:text="3"

                tools:layout_editor_absoluteX="255dp"
                tools:layout_editor_absoluteY="178dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="207dp"
            android:layout_weight="0"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/car_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/parkinglot"

                android:text="4"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="246dp" />

            <Button
                android:id="@+id/car_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/parkinglot"

                android:text="5"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="246dp" />

            <Button
                android:id="@+id/car_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/parkinglot"

                android:text="6"
                tools:layout_editor_absoluteX="255dp"
                tools:layout_editor_absoluteY="246dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
